--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Luckiest Guy';
-    src: url('assets/fonts/Luckiest\ Guy.ttf') format('truetype');
+    src: url('assets/fonts/Luckiest Guy.ttf') format('truetype');
     font-display: swap;
 }
 
