--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -508,7 +508,7 @@ footer,
     min-height: 60vh;
     background: linear-gradient(rgba(13, 46, 17, .7),
                                      rgba(13, 46, 17, .7)), 
-                                            url('assets/img/pexels-alexas-fotos-2255459.jpg');
+                                            url('../img/pexels-alexas-fotos-2255459.jpg');
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
